--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "bosca-lesson",
   "description": "example bosca course boiler",
-  "permissions": {
-    "client": true,
-    "server": false
-  }
+  "dockerImage": null
 }
