--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "name": "bosca-lesson",
-  "description": "example bosca course boiler"
+  "description": "example bosca course boiler",
   "dockerImage": null
 }
